improvements are implemented in the view

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="black_shade_1">#292D36</color>
+    <color name="gris">#808080</color>
 </resources>
