--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,32 +11,34 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/idPBLoading"
-        android:visibility="visible"
+        android:visibility="gone"
         android:layout_centerInParent="true"/>
     
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/idRLHome"
-        android:visibility="gone">
+        android:visibility="visible">
 
-    <ImageView
-        android:id="@+id/idVBack"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@color/black_shade_1" />
-    <TextView
-        android:id="@+id/idTVCityName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="City name"
-        android:textAlignment="center"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:layout_marginTop="30dp"
-        android:padding="20dp"
-        android:textSize="18sp"/>
+        <ImageView
+            android:id="@+id/idVBack"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:src="@color/black_shade_1" />
+
+        <TextView
+            android:id="@+id/idTVCityName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:gravity="center"
+            android:padding="20dp"
+            android:text="Cali"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="40sp"
+            android:textStyle="bold" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -74,7 +76,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/idVSearch"
-        android:layout_margin="10dp"
+        android:layout_margin="0.1dp"
         android:layout_weight="0.5"
         android:layout_gravity="center"
         android:background="@android:color/transparent"
@@ -90,47 +92,64 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/idLLEdt"
             android:layout_marginStart="10dp"
-            android:layout_margin="10dp"
+            android:layout_marginTop="25dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
             android:gravity="center_horizontal"
             android:padding="5dp"
             android:text="23"
             android:textColor="@color/white"
             android:textSize="70dp" />
+
         <ImageView
+            android:id="@+id/idIVIcon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/idIVIcon"
-            android:layout_centerHorizontal="true"
             android:layout_below="@id/idTVTemperature"
-            android:layout_margin="10dp"
-            android:src="@mipmap/ic_launcher"/>
+            android:layout_centerHorizontal="true"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:src="@mipmap/ic_launcher" />
+
+        <TextView
+            android:id="@+id/idTVCondition"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/idIVIcon"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:gravity="center"
+            android:text="Condition"
+            android:textAlignment="center"
+            android:textSize="30dp"
+            android:textColor="@color/gris" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/idTVCondition"
-            android:layout_margin="10dp"
-            android:gravity="center"
-            android:textAlignment="center"
-            android:text="Condition"
-            android:textColor="@color/white"
-            android:layout_below="@id/idIVIcon"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:layout_marginBottom="10dp"
+            android:layout_above="@id/idRVWeather"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             android:text="Today Weather Forecast"
             android:textColor="@color/white"
-            android:layout_above="@id/idRVWeather"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:gravity="center"
+            />
+
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/idRVWeather"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/idRVWeather"
+            android:layout_marginBottom="50dp"
             android:layout_alignParentBottom="true"
             android:orientation="horizontal"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
 
 
